--- a/resources/themes/phone/modules/_maps.scss
+++ b/resources/themes/phone/modules/_maps.scss
@@ -1,100 +1,61 @@
 .hospitals-list{
-	background: #ffffff;
-	
-	.top-bar{
-		background: $orange;
-		border-bottom: 2px solid #ffffff;
-		
-		.x-title{
-			font-size: 18px;
-			color: #ffffff;
-			text-shadow: none;
-			font-weight: normal;
-		}
-		.close-button{
-			.close{
-				color: #ffffff;
-				width: 50px;
-				height: 50px;
-				line-height: 50px;
-				top: 0px;
-				right: 0px;
-				
-				&::before{
-					line-height: 50px!important;
-				}
-			}
-		}
-	}
+	background: #f6f6f8;
 	
 	.x-dataview-container{
 		.item{
-			border-bottom: 2px solid #ffffff;
+			border-bottom: 1px solid #d9e0f0;
+			padding: 0 0 10px 0;
 			
-			.img-container{
-				@include wbz-box-pack(end);
-				@include wbz-box-align(start);
-				background-size: cover;
-				background-position: center;
-				background-repeat: no-repeat;
-			}
-			.gradient-bg{
-				@include wbz-box-pack(center);
-				overflow: hidden;
-				padding: 0px 10px 10px 10px;
-				@include background(linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.3) 0.3, rgba(0,0,0,0.6) 0.97, rgba(0,0,0,0.7)));
-				background: -ms-linear-gradient(top, rgba(0,0,0,00) 0%, rgba(0,0,0,0.3) 30%, rgba(0,0,0,0.6) 97%,  rgba(0,0,0,0.7) 100%); /* IE10+ */
-				width: 100%;
+			.name{
+				font-size: 16px;
+				color: $dark-grey;
+				line-height: 18px;
+				padding: 15px 20px;
 				
-				h1{
-					font-size: 15px;
-					color: #ffffff;
-					font-weight: normal;
-					margin: 0 0 5px 0;
+				span{
+					font-size: 13px;
+					color: $dark-orange;
 				}
-				.stats{
-					@include wbz-box-pack(start);
+			}
+			div{
+				@include wbz-box-pack(start);
+				
+				.text{
+					font-size: 11px;
+					color: $light-grey;
 					
-					.comments{
-						font-size: 13px;
-						color: $light-blue;	
-						@include wbz-display-inline-box();
-						margin: 0 15px 0 0;
-						
-						.icon{
-							@include wbz-inline-icon(comment_empty, 18px);
-							color: $light-blue;
-							width: 18px;
-							height: 18px;
-							margin: 0 5px 0 0;
-							
-							&::before{
-								line-height: 18px;
-								position: relative;
-							}
-						}
-					}
-					.ranking{
-						font-size: 13px;
-						color: $light-blue;	
-						@include wbz-display-inline-box();
-						margin: 0 15px 0 0;
-						
-						.icon{
-							@include wbz-inline-icon(star, 18px);
-							color: $light-blue;
-							width: 18px;
-							height: 18px;
-							margin: 0 5px 0 0;
-							
-							&::before{
-								line-height: 18px;
-								position: relative;
-							}
-						}
+					a{
+						color: $blue;
 					}
 				}
-			}	
+				.icon{
+					color: $light-grey;
+					position: relative;
+					width: 20px;
+					margin: 0 10px 0 0 ;
+				}
+			}
+			.address{
+				padding: 2px 20px;
+				
+				.icon{
+					@include wbz-inline-icon(map, 20px);
+				}
+			}
+			.phone{
+				padding: 2px 20px;
+				
+				.icon{
+					@include wbz-inline-icon(phone, 20px);
+				}			
+			}
+			.website{
+				padding: 2px 20px;
+				
+				.icon{
+					@include wbz-inline-icon(link, 20px);
+				}
+			}
 		}
 	}
 }
