--- a/resources/sass/phone/_all.scss
+++ b/resources/sass/phone/_all.scss
@@ -23,6 +23,9 @@
 @import '../../themes/phone/modules/videos';
 @import '../../themes/phone/modules/media';
 @import '../../themes/phone/modules/maps';
+@import '../../themes/phone/modules/call';
+@import '../../themes/phone/modules/contact';
+@import '../../themes/phone/modules/share';
 
 /**********************************************************************************************************************/
 /*
